--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,13 @@
       <groupId>org.slf4j</groupId>
       <artifactId>log4j-over-slf4j</artifactId>
       <version>${slf4j.version}</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>${logback.version}</version>
+      <optional>true</optional>
     </dependency>
     <!-- Test Dependencies -->
     <dependency>
