--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
     <commons-lang3.version>3.1</commons-lang3.version>
   </properties>
 
+  <licenses>
+      <license>
+        <name>The Apache Software License, Version 2.0</name>
+        <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        <distribution>repo</distribution>
+      </license>
+  </licenses>
+
   <dependencies>
     <dependency>
       <groupId>org.springframework.social</groupId>
@@ -44,8 +52,8 @@
       <artifactId>commons-lang3</artifactId>
       <version>${commons-lang3.version}</version>
     </dependency>
-    
-    
+
+
     <!-- Logging Dependencies -->
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -280,5 +288,5 @@
       </snapshots>
     </repository>
   </repositories>
-  
+
 </project>
